# headspace

./: README.md  SYSTEM.md  pyproject.toml
agents/: README.md
baton/: bridge.py
docs/: api-reference.md  for-agents.md  quickstart-agent.md
headspace/: __init__.py  __main__.py  _extension.py  agent.py  cli.py  demo.py  test_agent.py
headspace/baton/: __init__.py  bridge.py
headspace/forge/: __init__.py  apply.py  context.py
headspace/swarm/: __init__.py  server.py
proxy/: headspace-config.yaml
swarm/: server.py
