[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "headspace"
version = "0.2.0"
description = "Headspace - the SuperInstance context compression plane"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SuperInstance", email = "noreply@superinstance.dev"},
]
dependencies = [
    "starlette>=0.27",
    "uvicorn>=0.23",
    "headroom-ai>=0.25",
    "PyYAML>=6.0",
]

[project.scripts]
headspace = "headspace.cli:main"

[tool.setuptools.packages.find]
include = ["headspace*"]
