[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "headspace"
version = "0.2.0"
description = "Headspace - the swarm-managed context compression plane for the SuperInstance fleet"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SuperInstance", email = "noreply@superinstance.dev"},
]
dependencies = [
    "starlette>=0.27",
    "uvicorn>=0.23",
    "headroom-ai>=0.25",
    "PyYAML>=6.0",
]

[project.urls]
homepage = "https://github.com/SuperInstance/headspace"
repository = "https://github.com/SuperInstance/headspace"

[project.scripts]
headspace = "headspace.cli:main"

[project.entry-points."headroom.proxy_extension"]
superinstance = "headspace._extension:install"
headspace = "headspace._extension:install"

[tool.setuptools.packages.find]
include = ["headspace*"]
